--- a/chessEngineTrainer.ipynb
+++ b/chessEngineTrainer.ipynb
@@ -353,6 +353,19 @@
    "source": [
     "history"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TODO\n",
+    "- do inference\n",
+    "- evaluate on test dataset\n",
+    "- do some hyperparameter tuning, maybe grid search or something\n",
+    "- add regularisation\n",
+    "- add prop initialisation\n",
+    "- Then start to think about architectural changes"
+   ]
   }
  ],
  "metadata": {
