better than it was

--- a/chessEngineTrainer.ipynb
+++ b/chessEngineTrainer.ipynb
@@ -1480,21 +1480,21 @@
     "- [x] add prop initialisation\n",
     "- [ ] Then start to think about architectural changes\n",
     "- [ ] do some hyperparameter tuning, maybe grid search or something\n",
-    "  - [ ] learning rate scheduler\n",
+    "  - [ ] **learning rate scheduler\n",
     "  - [ ] embedding dimension changes\n",
     "  - [ ] model neurons ++\n",
-    "  - [ ] batch/ layer normalisation\n",
+    "  - [ ] **batch/ layer normalisation\n",
     "  - [ ] different precision\n",
     "  - [ ] custom loss function of the specific problem\n",
     "  - [ ] Check for potential gradient vanishing/exploding"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "current precision is giving loss as int, fix it"
+   ]
   }
  ],
  "metadata": {
