--- a/chessEngineTrainer.ipynb
+++ b/chessEngineTrainer.ipynb
@@ -30323,14 +30323,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# hyperparameters\n",
     "lr = 0.1\n",
     "num_steps = 3000\n",
-    "warmup_steps = 250\n",
+    "warmup_steps = 50\n",
     "bs = len(X)\n",
     "# allowed_error = 100 #\n",
     "d1 = {1:10, 2:20}\n",
@@ -31537,323 +31537,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Inference"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "r n b q k b n r\n",
-      "p p p p p p p p\n",
-      ". . . . . . . .\n",
-      ". . . . . . . .\n",
-      ". . . . . . . .\n",
-      ". . . . . . . .\n",
-      "P P P P P P P P\n",
-      "R N B Q K B N R\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(['__annotations__',\n",
-       "  '__class__',\n",
-       "  '__copy__',\n",
-       "  '__deepcopy__',\n",
-       "  '__delattr__',\n",
-       "  '__dict__',\n",
-       "  '__dir__',\n",
-       "  '__doc__',\n",
-       "  '__eq__',\n",
-       "  '__format__',\n",
-       "  '__ge__',\n",
-       "  '__getattribute__',\n",
-       "  '__gt__',\n",
-       "  '__hash__',\n",
-       "  '__init__',\n",
-       "  '__init_subclass__',\n",
-       "  '__le__',\n",
-       "  '__lt__',\n",
-       "  '__module__',\n",
-       "  '__ne__',\n",
-       "  '__new__',\n",
-       "  '__reduce__',\n",
-       "  '__reduce_ex__',\n",
-       "  '__repr__',\n",
-       "  '__setattr__',\n",
-       "  '__sizeof__',\n",
-       "  '__str__',\n",
-       "  '__subclasshook__',\n",
-       "  '__weakref__',\n",
-       "  '_algebraic',\n",
-       "  '_algebraic_and_push',\n",
-       "  '_algebraic_without_suffix',\n",
-       "  '_attacked_for_king',\n",
-       "  '_clear_board',\n",
-       "  '_ep_skewered',\n",
-       "  '_epd_operations',\n",
-       "  '_from_chess960',\n",
-       "  '_generate_evasions',\n",
-       "  '_is_halfmoves',\n",
-       "  '_is_safe',\n",
-       "  '_parse_epd_ops',\n",
-       "  '_push_capture',\n",
-       "  '_reduces_castling_rights',\n",
-       "  '_remove_piece_at',\n",
-       "  '_repr_svg_',\n",
-       "  '_reset_board',\n",
-       "  '_set_board_fen',\n",
-       "  '_set_castling_fen',\n",
-       "  '_set_chess960_pos',\n",
-       "  '_set_piece_at',\n",
-       "  '_set_piece_map',\n",
-       "  '_slider_blockers',\n",
-       "  '_stack',\n",
-       "  '_to_chess960',\n",
-       "  '_transposition_key',\n",
-       "  '_valid_ep_square',\n",
-       "  '_validate_epd_opcode',\n",
-       "  'aliases',\n",
-       "  'apply_mirror',\n",
-       "  'apply_transform',\n",
-       "  'attackers',\n",
-       "  'attackers_mask',\n",
-       "  'attacks',\n",
-       "  'attacks_mask',\n",
-       "  'bishops',\n",
-       "  'board_fen',\n",
-       "  'can_claim_draw',\n",
-       "  'can_claim_fifty_moves',\n",
-       "  'can_claim_threefold_repetition',\n",
-       "  'captures_compulsory',\n",
-       "  'castling_rights',\n",
-       "  'castling_shredder_fen',\n",
-       "  'castling_xfen',\n",
-       "  'checkers',\n",
-       "  'checkers_mask',\n",
-       "  'chess960',\n",
-       "  'chess960_pos',\n",
-       "  'clean_castling_rights',\n",
-       "  'clear',\n",
-       "  'clear_board',\n",
-       "  'clear_stack',\n",
-       "  'color_at',\n",
-       "  'connected_kings',\n",
-       "  'copy',\n",
-       "  'empty',\n",
-       "  'ep_square',\n",
-       "  'epd',\n",
-       "  'fen',\n",
-       "  'find_move',\n",
-       "  'from_chess960_pos',\n",
-       "  'from_epd',\n",
-       "  'fullmove_number',\n",
-       "  'generate_castling_moves',\n",
-       "  'generate_legal_captures',\n",
-       "  'generate_legal_ep',\n",
-       "  'generate_legal_moves',\n",
-       "  'generate_pseudo_legal_captures',\n",
-       "  'generate_pseudo_legal_ep',\n",
-       "  'generate_pseudo_legal_moves',\n",
-       "  'gives_check',\n",
-       "  'halfmove_clock',\n",
-       "  'has_castling_rights',\n",
-       "  'has_chess960_castling_rights',\n",
-       "  'has_insufficient_material',\n",
-       "  'has_kingside_castling_rights',\n",
-       "  'has_legal_en_passant',\n",
-       "  'has_pseudo_legal_en_passant',\n",
-       "  'has_queenside_castling_rights',\n",
-       "  'is_attacked_by',\n",
-       "  'is_capture',\n",
-       "  'is_castling',\n",
-       "  'is_check',\n",
-       "  'is_checkmate',\n",
-       "  'is_en_passant',\n",
-       "  'is_fifty_moves',\n",
-       "  'is_fivefold_repetition',\n",
-       "  'is_game_over',\n",
-       "  'is_insufficient_material',\n",
-       "  'is_into_check',\n",
-       "  'is_irreversible',\n",
-       "  'is_kingside_castling',\n",
-       "  'is_legal',\n",
-       "  'is_pinned',\n",
-       "  'is_pseudo_legal',\n",
-       "  'is_queenside_castling',\n",
-       "  'is_repetition',\n",
-       "  'is_seventyfive_moves',\n",
-       "  'is_stalemate',\n",
-       "  'is_valid',\n",
-       "  'is_variant_draw',\n",
-       "  'is_variant_end',\n",
-       "  'is_variant_loss',\n",
-       "  'is_variant_win',\n",
-       "  'is_zeroing',\n",
-       "  'king',\n",
-       "  'kings',\n",
-       "  'knights',\n",
-       "  'lan',\n",
-       "  'legal_moves',\n",
-       "  'mirror',\n",
-       "  'move_stack',\n",
-       "  'occupied',\n",
-       "  'occupied_co',\n",
-       "  'one_king',\n",
-       "  'outcome',\n",
-       "  'parse_san',\n",
-       "  'parse_uci',\n",
-       "  'parse_xboard',\n",
-       "  'pawnless_tbw_magic',\n",
-       "  'pawnless_tbw_suffix',\n",
-       "  'pawnless_tbz_magic',\n",
-       "  'pawnless_tbz_suffix',\n",
-       "  'pawns',\n",
-       "  'peek',\n",
-       "  'piece_at',\n",
-       "  'piece_map',\n",
-       "  'piece_type_at',\n",
-       "  'pieces',\n",
-       "  'pieces_mask',\n",
-       "  'pin',\n",
-       "  'pin_mask',\n",
-       "  'ply',\n",
-       "  'pop',\n",
-       "  'promoted',\n",
-       "  'pseudo_legal_moves',\n",
-       "  'push',\n",
-       "  'push_san',\n",
-       "  'push_uci',\n",
-       "  'push_xboard',\n",
-       "  'queens',\n",
-       "  'remove_piece_at',\n",
-       "  'reset',\n",
-       "  'reset_board',\n",
-       "  'result',\n",
-       "  'rooks',\n",
-       "  'root',\n",
-       "  'san',\n",
-       "  'san_and_push',\n",
-       "  'set_board_fen',\n",
-       "  'set_castling_fen',\n",
-       "  'set_chess960_pos',\n",
-       "  'set_epd',\n",
-       "  'set_fen',\n",
-       "  'set_piece_at',\n",
-       "  'set_piece_map',\n",
-       "  'shredder_fen',\n",
-       "  'starting_fen',\n",
-       "  'status',\n",
-       "  'tbw_magic',\n",
-       "  'tbw_suffix',\n",
-       "  'tbz_magic',\n",
-       "  'tbz_suffix',\n",
-       "  'transform',\n",
-       "  'turn',\n",
-       "  'uci',\n",
-       "  'uci_variant',\n",
-       "  'unicode',\n",
-       "  'variation_san',\n",
-       "  'was_into_check',\n",
-       "  'xboard',\n",
-       "  'xboard_variant'],\n",
-       " 'rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR w KQkq - 0 1')"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import chess\n",
-    "b = chess.Board()\n",
-    "print(b)\n",
-    "dir(b), b.fen()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fen_sample ='rnbqkbnr/pppppppp/8/8/4P3/8/PPPP1PPP/RNBQKBNR b KQkq - 0 1'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_score(fen_sample):\n",
-    "    # encoding\n",
-    "    encoder_object = ChessEncoder()\n",
-    "    encoded_fen = torch.tensor(encoder_object.encode_fen(fen_i), dtype=torch.int32).to(device).view(200)\n",
-    "    # print(encoded_fen.shape)\n",
-    "    bs=1\n",
-    "    model = MLPEngine(embedding_dim=64).to(device)\n",
-    "    model.load_state_dict(torch.load('saves/bad_model.pt'))\n",
-    "    model.eval()\n",
-    "    y_pred = model(encoded_fen)\n",
-    "    return y_pred.item()\n",
-    "    # run the model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['8/7P/8/6K1/6P1/6k1/8/8', 'b', '-', '-']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_832976/2130797547.py:8: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  model.load_state_dict(torch.load('saves/bad_model.pt'))\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "-656.3048095703125"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "get_score(fen_sample)"
+    "# TO DO"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- [ ] do inference, and run a partially trained model with the GUI intact\n",
-    "- [ ] find a way to fix the fact that our model is giving integer loss\n",
+    "- [x] do inference, and run a partially trained model with the GUI intact\n",
+    "- [ ] **find a way to fix the fact that our model is giving integer loss\n",
+    "- [ ] **Fix the bug in initialisation\n",
     "- [ ] implement weights and biases or tensorboard \n",
     "- [ ] improve the model\n",
     "  - [ ] get a better/ bigger dataset\n",
     "  - [ ] hyperparameter and architecture\n",
     "    - [ ] add CNN\n",
-    "    - [ ] better encoding\n",
+    "    - [x] better encoding\n",
     "    - [ ] residual connections\n",
     "    - [ ] try adamW after tuning b1 and b2\n",
     "    - [ ] increase embedding dim\n",
