--- a/chessEngineTrainer.ipynb
+++ b/chessEngineTrainer.ipynb
@@ -23,6 +23,138 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sqlite3\n",
+    "import pandas as pd\n",
+    "\n",
+    "def read_entire_database(db_path):\n",
+    "    \"\"\"\n",
+    "    Read the entire dataset from a SQLite database.\n",
+    "    \n",
+    "    Args:\n",
+    "        db_path (str): Path to the SQLite database file\n",
+    "    \n",
+    "    Returns:\n",
+    "        dict: A dictionary where keys are table names and values are pandas DataFrames\n",
+    "    \"\"\"\n",
+    "    # Establish a connection to the database\n",
+    "    try:\n",
+    "        conn = sqlite3.connect(db_path)\n",
+    "        \n",
+    "        # Get list of all tables in the database\n",
+    "        cursor = conn.cursor()\n",
+    "        cursor.execute(\"SELECT name FROM sqlite_master WHERE type='table';\")\n",
+    "        tables = cursor.fetchall()\n",
+    "        print(tables)\n",
+    "        \n",
+    "        # Dictionary to store dataframes\n",
+    "        database_data = {}\n",
+    "        \n",
+    "        # Read each table into a pandas DataFrame\n",
+    "        for table_name in tables:\n",
+    "            table_name = table_name[0]  # Extract table name from tuple\n",
+    "            df = pd.read_sql_query(f\"SELECT * FROM {table_name}\", conn)\n",
+    "            database_data[table_name] = df\n",
+    "            \n",
+    "            # Print table information\n",
+    "            print(f\"Table: {table_name}\")\n",
+    "            print(f\"Number of rows: {len(df)}\")\n",
+    "            print(f\"Columns: {list(df.columns)}\")\n",
+    "            print(\"-\" * 50)\n",
+    "        \n",
+    "        return database_data\n",
+    "    \n",
+    "    except sqlite3.Error as e:\n",
+    "        print(f\"An error occurred: {e}\")\n",
+    "    \n",
+    "    finally:\n",
+    "        # Close the connection\n",
+    "        if conn:\n",
+    "            conn.close()\n",
+    "\n",
+    "# Usage example\n",
+    "def main():\n",
+    "    # Replace 'test.db' with the actual path to your database file\n",
+    "    database_path = 'test.db'\n",
+    "    \n",
+    "    # Read the entire database\n",
+    "    database_contents = read_entire_database(database_path)\n",
+    "    print(database_contents)\n",
+    "main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Table Name : []\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import sqlite3\n",
+    "# import sqlalchemy \n",
+    "\n",
+    "try:\n",
+    "    conn = sqlite3.connect(\"file.db\")    \n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "\n",
+    "#Now in order to read in pandas dataframe we need to know table name\n",
+    "cursor = conn.cursor()\n",
+    "cursor.execute(\"SELECT name FROM sqlite_master WHERE type='table';\")\n",
+    "print(f\"Table Name : {cursor.fetchall()}\")\n",
+    "\n",
+    "df = pd.read_sql_query('SELECT * FROM sqlite_master', conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['__annotations__', '__class__', '__delattr__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__iter__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__next__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', 'arraysize', 'close', 'connection', 'description', 'execute', 'executemany', 'executescript', 'fetchall', 'fetchmany', 'fetchone', 'lastrowid', 'row_factory', 'rowcount', 'setinputsizes', 'setoutputsize']\n",
+      "[('table', 'evaluations', 'evaluations', 2, 'CREATE TABLE evaluations(id,fen,binary,eval)'), ('index', 'id_idx', 'evaluations', 1716182, 'CREATE INDEX id_idx on evaluations (id)')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sqlite3\n",
+    "dbfile = 'data/test.db'\n",
+    "con = sqlite3.connect(dbfile)\n",
+    "\n",
+    "# creating cursor\n",
+    "cur = con.cursor()\n",
+    "print(dir(cur))\n",
+    "table_list = [a for a in cur.execute(\"SELECT * FROM sqlite_master\")]\n",
+    "# here is you table list\n",
+    "print(table_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
